*SVN*

* Fixed bug in strict host key verifier on cache miss [Mike Timm]

* Added Net::SSH::Test to facilitate testing complex SSH state machines [Jamis Buck]

* Added Channel#eof? and Channel#eof! [Jamis Buck]


*2.0 Preview Release 1 (1.99.0)* (21 Aug 2007)

* First preview release of Net::SSH v2