@@ -1,5 +1,7 @@
 *SVN*
 
+* Reworked Net::SSH::Prompt to use conditionally-selected modules [Jamis Buck, suggested by James Rosen]
+
 * Fixed bug in strict host key verifier on cache miss [Mike Timm]
 
 * Added Net::SSH::Test to facilitate testing complex SSH state machines [Jamis Buck]
